# druid-q

./: .gitignore  README.md
.github/workflows/: build_and_push_hue_bridge.yaml  build_and_push_lighting_controller.yaml  build_and_push_lighting_director.yaml  build_and_release.yaml  build_packages.yaml
common/events/: README.md  pyproject.toml
common/events/src/events/: __init__.py  events.py  validation.py
common/publisher/: pyproject.toml
common/publisher/src/publisher/: __init__.py  publisher.py
common/subscriber/: pyproject.toml
common/subscriber/src/subscriber/: __init__.py  strings.py
evokers/nfc/: README.md  event.py  nfc.py  observer.py  publisher.py  pyproject.toml  requirements.txt  scenes.json  screen.py  strings.py
evokers/nfc/src/nfc/: __main__.py  app.py  event.py  observer.py  publisher.py  screen.py  strings.py
evokers/nfc/src/nfc/observer/: __init__.py  acr122u.py  arc122u.py  library.py  observer.py  obsever.py  pn532.py
evokers/nfc/src/nfc/scene_store/: __init__.py  json.py  scene_store.py
evokers/nfc/src/nfc/screen/: __init__.py  display_hat.py  screen.py  terminal.py
evokers/nfc/utils/: write-scene.py
evokers/nfc/utils/store_scene/: __main__.py
evokers/nfc/utils/write_scene/: __main__.py
sprites/foundry_bridge/: .env.example  pyproject.toml
sprites/foundry_bridge/src/foundry_bridge/: __main__.py  app.py  keyboard.py  scene_map.py  strings.py  subscriber.py  validation.py
sprites/hue_bridge/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
sprites/hue_bridge/src/hue_bridge/: __main__.py  app.py
sprites/lighting_controller/: dockerfile  pyproject.toml  requirements.txt
sprites/lighting_controller/src/lighting_controller/: __main__.py  app.py  hue.py  scene_queue.py
sprites/lighting_director/: Dockerfile  hue.py  pyproject.toml  requirements.txt
sprites/lighting_director/src/lighting_director/: __main__.py  app.py  llm.py  scene_store.py  schema.json  schema.txt
