[project]
name = "events"
version = "0.1.0"
description = "event types for DruidQ"
authors = [{ name = "Ian King", email = "ian.antking@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.poetry]
packages = [{ include = "events", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
