[project]
name = "nfc"
version = "0.1.0"
description = "read nfc tags and publish payload to DruidQ"
authors = [
    {name = "Ian King",email = "ian.antking@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "pyscard (>=2.2.2,<3.0.0)",
    "ndeflib (>=0.3.3,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
