[project]
name = "nfc"
version = "0.1.0"
description = "read nfc tags and publish payload to DruidQ"
authors = [
    { name = "Ian King", email = "ian.antking@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "pyscard (>=2.2.2,<3.0.0)",
    "ndeflib (>=0.3.3,<0.4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "events @ file:///home/ian/Projects/druid-q/common/events",
    "publisher @ file:///home/ian/Projects/druid-q/common/publisher"
]

[tool.poetry]
packages = [{ include = "nfc", from = "src" }, { include = "write_scene", from = "utils" }]
scripts = { nfc = "nfc.__main__:main", write = "write_scene.__main__:main" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
