[project]
name = "hue-bridge"
version = "0.1.0"
description = ""
authors = [
    {name = "Ian King",email = "ian.antking@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "hue_bridge", from = "src"}]

[tool.poetry.scripts]
hue_bridge = "hue_bridge.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
