[project]
name = "lighting-director"
version = "0.1.13"
description = ""
authors = [
    {name = "Ian King",email = "ian.antking@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "subscriber @ file:///home/ian/Projects/druid-q/common/subscriber",
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "events @ file:///home/ian/Projects/druid-q/common/events",
    "requests (>=2.32.4,<3.0.0)",
    "openai (>=1.93.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "lighting_director", from = "src"}]

[tool.poetry.scripts]
lighting_director = "lighting_director.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
